--- a/code/resources/index.html
+++ b/code/resources/index.html
@@ -8,6 +8,6 @@
     <h1>欢迎来到我的主页</h1>
     <p>这是一个由 HTML 构建的简单页面。</p>
     <br>
-    <img src="./images/example.jpg" alt="示例图片">
+    <!-- <img src="./images/example.jpg" alt="示例图片"> -->
 </body>
 </html>
